--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "obsidian-sample-plugin",
-  "version": "0.12.0",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "name": "obsidian-static-file-server",
+  "version": "0.0.1",
+  "description": "Host obsidian subfolders as static file servers.",
   "main": "main.js",
   "scripts": {
+    "prettier-format": "prettier --config .prettierrc.js *.ts --write",
+    "lint": "eslint . --ext .ts,.ts",
     "dev": "rollup --config rollup.config.js -w",
     "build": "rollup --config rollup.config.js --environment BUILD:production"
   },
@@ -14,10 +16,21 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@rollup/plugin-json": "^4.1.0",
     "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "obsidian": "^0.12.0",
+    "prettier": "^2.2.1",
     "rollup": "^2.32.1",
+    "rollup-plugin-copy": "^3.4.0",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
   }
 }
